--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
   "author": "Suraj",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.6.0",
-    "shortid": "^2.2.16"
+    "mongoose": "^8.6.0"
   }
 }
